Fix scrollbar to not be global

--- a/src/content.css
+++ b/src/content.css
@@ -2,13 +2,13 @@ html {
   scroll-behavior: smooth;
 }
 /* Scrollbar size */
-::-webkit-scrollbar {
+.omni-extension ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
   transition: 1s;
 }
 
-::-webkit-scrollbar-thumb {
+.omni-extension ::-webkit-scrollbar-thumb {
   background-color: rgba(127, 127, 127, 0.6);
   background-clip: padding-box;
   border: 2px solid transparent;
@@ -16,22 +16,22 @@ html {
   transition: 1s;
 }
 
-::-webkit-scrollbar-thumb:vertical:hover,
-::-webkit-scrollbar-thumb:horizontal:hover {
+.omni-extension ::-webkit-scrollbar-thumb:vertical:hover,
+.omni-extension ::-webkit-scrollbar-thumb:horizontal:hover {
   background-color: rgb(110, 110, 110);
   transition: 0.3s;
 }
 
-::-webkit-scrollbar-track {
+.omni-extension ::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-::-webkit-scrollbar-thumb:vertical:active,
-::-webkit-scrollbar-thumb:horizontal:active {
+.omni-extension ::-webkit-scrollbar-thumb:vertical:active,
+.omni-extension ::-webkit-scrollbar-thumb:horizontal:active {
   background: rgba(95, 91, 91, 1);
 }
 
-::-webkit-scrollbar-corner {
+.omni-extension ::-webkit-scrollbar-corner {
   background: none;
 }
 
